# sirius

./: .gitignore  Cargo.toml  Dockerfile  README.md  acl.rego  build.rs  do_config.sh
.github/workflows/: create_release.yaml  enforce-labels.yml  release.yaml  release_tags.yaml
deploy/: kustomization.yaml
deploy/base/: config.toml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml  token.yaml
deploy/env/develop/: ingress.yaml  kustomization.yaml  sidecar.yaml
deploy/opa/: acl.rego  config.toml  kustomization.yaml
proto/: permission.proto
src/: config.rs  controler.rs  error.rs  handelers.rs  main.rs  router.rs
src/controller/: list.rs  mod.rs  sync.rs  update.rs
src/utils/: error.rs  kafka.rs  mod.rs  opa.rs  test.rs
test/: config.toml
tests/: config.toml
