[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.6.*"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["request-id"] }
tokio = { version = "1.28.*", features = ["rt-multi-thread", "macros", "sync"]}
serde = "1.0.*"
serde_json = "1.0.*"
rs-utils = {git = "https://github.com/w6d-io/rs-utils",features = ["kratos", "anyhow-rocket"]}
figment = "0.10.*"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hyper = "0.14.23"
ory-kratos-client = "0.13.1"
futures = "0.3.26"
thiserror = "1.0.38"
axum-extra = { version = "0.7.0", features = ["cookie"] }
tonic = "0.9.*"
prost = "0.11.8"
reqwest = "0.11.14"
serde-email = "1.5.0"
uuid = { version = "1.3.1", features = ["serde"] }

[dependencies.libkafka]
git = "https://github.com/w6d-io/libkafka"
branch = "develop"
features = ["async", "anyhow"]

[build-dependencies]
tonic-build = "0.9.*"

[dev-dependencies]
mime = "0.3.17"
mockito = "1.0.0"
uuid = { version = "1.3.1", features = ["v4"] }
